# serde-ubjson

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  marker.rs  ser.rs
tests/: ser.rs
